# movies

./: .pre-commit-config.yaml  makefile  pyproject.toml
api/: _version.py
api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/endpoints/: __init__.py  v1.py
backend/: .coverage  .gitignore  makefile  pyproject.toml
backend/api/: __main__.py  settings.py
backend/api/endpoints/: __init__.py  v1.py
backend/api/endpoints/v1/: __init__.py  auth.py  session.py  v1.py
backend/api/schemas/: __init__.py
backend/dev/: fill_db.py
backend/dev_tools/: fill_db.py
backend/src/api/: _version.py  app.py  database.py  exceptions.py  migrate.py  settings.py
backend/src/api/crud/: user.py
backend/src/api/endpoints/: __init__.py
backend/src/api/endpoints/v1/: auth.py  session.py
backend/src/api/models/: __init__.py
backend/src/api/schemas/: __init__.py  _user.py
backend/src/movies/: _types.py  settings.py
backend/src/movies/api/: app.py  settings.py  state.py
backend/src/movies/api/endpoints/v1/: __init__.py  auth.py  session.py
backend/src/movies/api/schemas/: __init__.py  _movie.py  _session.py  _token.py  _user.py
backend/src/movies/core/: exceptions.py  transaction.py
backend/src/movies/core/database/: __init__.py  data_model.py  db_session.py
backend/src/movies/core/repositories/: __init__.py  interfaces.py  movie_repo.py  session_repo.py  user_repo.py
backend/src/movies/scraper/: __main__.py  config.py
backend/src/movies/scraper/imdb/: historical.py
backend/tests/: conftest.py
backend/tests/unit/api/: test_auth_api.py
backend/tests/unit/database/: conftest.py  test_data_model.py  test_transaction.py  test_user_repo.py
frontend/: makefile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/client/: index.ts
frontend/src/client/models/: Body_create_session_v1_session_post.ts  Body_login_for_access_token_v1_auth_token_post.ts  Movie.ts  Session.ts  SessionMatches.ts  User.ts  Vote.ts  api__endpoints__v1__auth__User.ts  api__schemas__User.ts
frontend/src/client/services/: DefaultService.ts
frontend/src/components/: Header.tsx
frontend/src/pages/: Home.tsx  Root.tsx  SessionDetails.tsx  SessionHeader.tsx
