[project]
authors = [
    { name = "Federico Oberndorfer", email = "federico.ober@hotmail.com" },
]
name = "api"
dependencies = [
    "fastapi >= 0.100.0",
    "passlib[bcrypt]",
    "uvicorn[standard]",
    "pydantic[email]>=2",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "pydantic-settings",
]
version = "0.1.0"

[build-system]
requires = ["setuptools>=68"]
