[project]
authors = [
    { name = "Federico Oberndorfer", email = "federico.ober@hotmail.com" },
]
name = "movies"
version = "0.1.0"

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.1",
    "python-multipart>=0.0.6",
    "pydantic[email]>=2",
    "pydantic-settings>=2",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt[crypto]>=2.8.0",
    "alembic",
    "sqlmodel",
    "aiocache",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.19.0",
    "mypy>=1.4.1",
    "sqlalchemy[mypy]",
    "types-python-jose",
    "types-passlib",
    "ruff",
    "pytest",
    "pytest-cov",
    "freezegun",
]


[build-system]
requires = ["setuptools>=68"]

[tool.pytest.ini_options]
addopts = """
--cov=movies
"""
testpaths = ["tests"]
filterwarnings = ['ignore::DeprecationWarning']


[tool.mypy]
files = ["src"]
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]

[tool.ruff.lint]
select = ["I", "PGH", "S", "B"]

[tool.ruff.lint.per-file-ignores]
"src/api/endpoints/**/*" = ["B008"]
"tests/**/*" = ["S"]
